--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,9 @@
-dubbo.application.name=WannaDubboProject0
-dubbo.application.id=WannaDubboProject0
-dubbo.registries.wanna.id=WannaDubboRegistry0
-dubbo.scan.base-packages=com.wanna.spring.dubbo
+dubbo.scan.base-packages=com.wanna.test.dubbo
+
+dubbo.application.name=WannaDubboProject
+dubbo.application.id=WannaDubboProject
+dubbo.registries.wannaRegistry.id=WannaDubboRegistry
+dubbo.protocols.wannaProtocol.id=WannaDubboProtocol
 
 
 # is endpoint discovery page enabled
