--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,5 @@ management.endpoints.web.discovery.enabled=true
 
 spring.devtools.restart.poll-interval=1000
 spring.devtools.restart.trigger-file=trigger.txt
+
+spring.main.application-type=SERVLET
